Fix subtitle text overflowing
Saw that with long media title in media player tile

--- a/styles/main.css
+++ b/styles/main.css
@@ -448,7 +448,7 @@ body {
 .item.-device_tracker .item-title,
 .item.-camera .item-title,
 .item.-camera_thumbnail .item-title {
-  text-shadow: /*1px 1px 1px rgba(0,0,0,.2),*/ 1px 1px 0 rgba(0, 0, 0, 0.2);
+  text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.2);
   background: rgba(0, 0, 0, 0.15);
   right: auto;
   line-height: 22px;
@@ -567,6 +567,9 @@ body {
   font-size: 0.85em;
   font-weight: 400;
   opacity: 0.9;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
   z-index: 2;
 }
 .item-state {
@@ -576,7 +579,7 @@ body {
   right: 6px;
   background: rgba(0, 0, 0, 0.2);
   padding: 1px 6px 2px;
-  font-size: .9em;
+  font-size: 0.9em;
   color: #ffffff;
   border-radius: 1px;
   z-index: 2;
@@ -1697,7 +1700,7 @@ input[type=range]::-moz-range-thumb {
   border-top-color: #eeeeee;
   border-left-color: #eee;
   margin: -1px;
-  box-shadow: 1px 1px 0 #000000, -1px -1px 0 #f5f5f5;
+  box-shadow: 1px 1px 0 #000, -1px -1px 0 #f5f5f5;
   border-radius: 1px;
 }
 .-theme-win95 .item-select {
@@ -1862,4 +1865,3 @@ input[type=range]::-moz-range-thumb {
     width: 0;
   }
 }
-(node:25447) [DEP0026] DeprecationWarning: util.print is deprecated. Use console.log instead.
